--- a/photo.html
+++ b/photo.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="contact.html">Contacts</a>
+    <a href="index.html">homepage</a>
    <img src="img/crossant.jpg" />
 </body>
 </html>
