--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="photo.index">Photos</a>
+    <a href="photo.html">Photos</a>
     <a href="contact.html"> Contacts</a>
     <h1>I love Crossants🥐</h1>
 </body>
