--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="photo.html">Photos</a>
-    <a href="contact.html"> Contacts</a>
-    <h1>I love Crossants🥐</h1>
+    <ul>
+        <li><a href="index.html">homepage</a></li>
+        <li><a href="photo.html">Photos</a></li>
+        <li><a href="contact.html"> Contacts</a></li>
+    </ul>
+       <h1>I love Crossants🥐</h1>
 </body>
 </html>
