links in a unordered list

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">homepage</a>
-    <a href="photo.html">Photos</a>
+    <ul>
+        <li><a href="index.html">homepage</a></li>
+        <li><a href="photo.html">Photos</a></li>
+        <li><a href="contact.html"> Contacts</a></li>
+    </ul>
+    
    <h1>My Contacts</h1> 
 
 </body>
