--- a/photo.html
+++ b/photo.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="contact.html">Contacts</a>
-    <a href="index.html">homepage</a>
-   <img src="img/crossant.jpg" />
+    <ul>
+        <li><a href="index.html">homepage</a></li>
+        <li><a href="photo.html">Photos</a></li>
+        <li><a href="contact.html"> Contacts</a></li>
+    </ul>
+    
 </body>
 </html>
