--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <li><a href="contact.html"> Contacts</a></li>
     </ul>
        <h1>I love Crossants🥐</h1>
+       <p>
+        Croissants, a staple of French cuisine, are flaky,buttery pastries made from laminated dough.
+       </p>
 </body>
 </html>
