--- a/photo.html
+++ b/photo.html
@@ -12,6 +12,7 @@
         <li><a href="photo.html">Photos</a></li>
         <li><a href="contact.html"> Contacts</a></li>
     </ul>
+    <img src="img/crossant.jpg" />
     
 </body>
 </html>
