--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
     </ul>
     
    <h1>My Contacts</h1> 
+   <p> For orders contact</p>
+   <a href="mailto:monagengn2@gmail.com">💌monagengn2@gmail.com</a>
 
 </body>
 </html>
