--- a/photo.html
+++ b/photo.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">homepage</a></li>
-        <li><a href="photo.html">Photos</a></li>
-        <li><a href="contact.html"> Contacts</a></li>
-    </ul>
+    <header>
+        <a href="index.html">homepage</a>
+        <a href="photo.html">Photos</a>
+        <a href="contact.html"> Contacts</a>
+    
+    </header>
     <img src="img/crossant.jpg" />
     
 </body>
