--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html">homepage</a>
+        <a href="index.html">Homepage</a>
         <a href="photo.html">Photos</a>
         <a href="contact.html"> Contacts</a>
     
