--- a/photo.html
+++ b/photo.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <header>
-        <a href="index.html">homepage</a>
+        <a href="index.html">Homepage</a>
         <a href="photo.html">Photos</a>
         <a href="contact.html"> Contacts</a>
     
     </header>
+    <br />
+    <p class="photo"> Our Breakfast Croissants </p>
     <img src="img/crossant.jpg" />
     
 </body>
