--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     
    <h1>My Contacts</h1> 
    <p> For orders contact</p>
-   <a href="mailto:monagengn2@gmail.com">💌monagengn2@gmail.com</a>
+   <a href="mailto:monagengn2@gmail.com" class="mail">💌monagengn2@gmail.com</a>
 
 </body>
 </html>
