--- a/photo.html
+++ b/photo.html
@@ -15,7 +15,7 @@
     </header>
     <br />
     <p class="photo"> Our Breakfast Croissants </p>
-    <img src="img/crossant.jpg" />
+    <img src="img/crossant.jpg" alt="croissant"/>
     
 </body>
 </html>
